// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsPage should redirect and alert on error 1`] = `
<Connect(RedirectAndAlert)
  alert={
    Object {
      "message": "Oh no!",
      "type": "error",
    }
  }
  to="/account/subaccounts"
/>
`;

exports[`DetailsPage should render api keys tab 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="Bob Evans, the restaurant. (123)"
>
  <Tabs
    color="orange"
    connectBelow={true}
    selected={1}
    tabs={
      Array [
        Object {
          "Component": [Function],
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": [Function],
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
        Object {
          "Component": [Function],
          "content": "Sending Domains",
          "to": "/account/subaccounts/123/sending-domains",
        },
      ]
    }
  />
  <Switch>
    <Route
      exact={true}
      path="/account/subaccounts/:id"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/api-keys"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/sending-domains"
      render={[Function]}
    />
  </Switch>
</Page>
`;

exports[`DetailsPage should render edit tab 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="Bob Evans, the restaurant. (123)"
>
  <Tabs
    color="orange"
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "Component": [Function],
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": [Function],
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
        Object {
          "Component": [Function],
          "content": "Sending Domains",
          "to": "/account/subaccounts/123/sending-domains",
        },
      ]
    }
  />
  <Switch>
    <Route
      exact={true}
      path="/account/subaccounts/:id"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/api-keys"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/sending-domains"
      render={[Function]}
    />
  </Switch>
</Page>
`;

exports[`DetailsPage should render loading page 1`] = `<Loading />`;

exports[`DetailsPage should select sending domains tab 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="Bob Evans, the restaurant. (123)"
>
  <Tabs
    color="orange"
    connectBelow={true}
    selected={2}
    tabs={
      Array [
        Object {
          "Component": [Function],
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": [Function],
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
        Object {
          "Component": [Function],
          "content": "Sending Domains",
          "to": "/account/subaccounts/123/sending-domains",
        },
      ]
    }
  />
  <Switch>
    <Route
      exact={true}
      path="/account/subaccounts/:id"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/api-keys"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/sending-domains"
      render={[Function]}
    />
  </Switch>
</Page>
`;

exports[`DetailsPage should show api key banner with new api key 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Subaccounts",
      "to": "/account/subaccounts",
    }
  }
  empty={Object {}}
  title="Bob Evans, the restaurant. (123)"
>
  <Connect(ApiKeySuccessBanner)
    title="Don't Forget Your API Key"
  />
  <Tabs
    color="orange"
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "Component": [Function],
          "content": "Details",
          "to": "/account/subaccounts/123",
        },
        Object {
          "Component": [Function],
          "content": "API Keys",
          "to": "/account/subaccounts/123/api-keys",
        },
        Object {
          "Component": [Function],
          "content": "Sending Domains",
          "to": "/account/subaccounts/123/sending-domains",
        },
      ]
    }
  />
  <Switch>
    <Route
      exact={true}
      path="/account/subaccounts/:id"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/api-keys"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/account/subaccounts/:id/sending-domains"
      render={[Function]}
    />
  </Switch>
</Page>
`;
